--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
     .khead{ font-weight:700; margin-bottom:2px; }
     .kmeta{ color:#9fb1cc; font-size:12px; }
   </style>
+  <style>
+    /* Ocultar botones de Reporte (Resumen) SOLO en la pantalla de Login */
+    #login #btnReporteResumen { display: none !important; }
+  </style>
+
 <style id="theme-override-light">
 /* === Light, professional theme override (no logic changes) === */
 :root{
@@ -2539,5 +2544,23 @@ document.addEventListener('click', (ev)=>{
 })();
 </script>
 
+
+<script>
+// Ocultar botón "Resumen (Sem)" en Login y mostrarlo cuando #app esté activo
+document.addEventListener('DOMContentLoaded', function(){
+  var btnSem = document.getElementById('btnOpenResumenSem');
+  if (btnSem) { btnSem.style.display = 'none'; }
+  var app = document.getElementById('app');
+  if (app && btnSem){
+    var toggle = function(){
+      var hidden = app.classList.contains('hidden');
+      btnSem.style.display = hidden ? 'none' : '';
+    };
+    toggle();
+    var mo = new MutationObserver(toggle);
+    mo.observe(app, {attributes:true, attributeFilter:['class']});
+  }
+});
+</script>
 </body>
 </html>
